--- a/homework/D03_Numpy 陣列的初始化.ipynb
+++ b/homework/D03_Numpy 陣列的初始化.ipynb
@@ -4,168 +4,182 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. [簡答題] 請問下列程式碼，運算結果分別為何？\n",
-    "\n",
-    "\n",
-    "\n",
-    "a = np.array( [20,30,40,50] )\n",
-    "\n",
-    "b = np.array( [1,2,3,4] ) \n",
-    "\n",
-    "c = 1\n",
-    "\n",
-    "d = np.array( [1] )\n",
-    "\n",
-    "e = np.array( [1,2] ) \n",
-    "\n",
-    "\n",
-    "\n",
-    "2. 如何在不用迴圈的情況下計算 (A+B)*(-A/2) ？那用迴圈怎麼做？\n",
-    "\n",
-    "3. 請問如何計算「1x6 的單位矩陣」和「6x1 的單位矩陣」的內積和外積？"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 40  60  80 100]\n",
-      "[21 32 43 54]\n",
-      "[21 31 41 51]\n",
-      "[21 31 41 51]\n",
-      "[[21 22]\n",
-      " [31 32]\n",
-      " [41 42]\n",
-      " [51 52]]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (4,) (2,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-6644ab22f112>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (4,) (2,) "
-     ]
-    }
-   ],
-   "source": [
-    "#1\n",
-    "import numpy as np\n",
-    "a = np.array( [20,30,40,50] )\n",
-    "b = np.array( [1,2,3,4] )\n",
-    "c = 1\n",
-    "d = np.array( [1] )\n",
-    "e = np.array( [1,2] )\n",
-    "\n",
-    "\n",
-    "print(a + a)\n",
-    "print(a + b)\n",
-    "print(a + c)\n",
-    "print(a + d)\n",
-    "print(a.reshape(-1,1) + e)\n",
-    "print(a + e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.5 -1.5 -1.5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#2\n",
-    "A = np.ones(3)*1\n",
-    "B = np.ones(3)*2\n",
-    "\n",
-    "print((A+B)*(-A/2))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[6.]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#3\n",
-    "A = np.ones((1,6))\n",
-    "B = np.ones((6,1))\n",
-    "print(A*B)\n",
-    "print(A@B)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "作業目標:\n",
-    "嘗試練習log的函式並應用\n",
-    "作業重點:\n",
-    "學員需要複習log的轉換方式\n",
-    "熟悉運用指數函數以及對數函數\n",
-    "\n",
-    "題目:\n",
-    "運用投影片中的分貝公式回答下列問題。\n",
-    "1.正常的談話的聲壓為20000微巴斯卡，請問多少分貝?\n",
-    "2.30分貝的聲壓會是50分貝的幾倍?\n",
-    "\n",
-    "GdB=20*np.log10(V1/V0)"
+    "作業\n",
+    "1. [簡答題] 請比較 np.zeros 和 np.empty 產生出來的陣列有何差異？為什麼要設計兩種方法？"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np "
+    "import numpy as np\n",
+    "print(np.zeros((2, 3)))\n",
+    "print(np.empty((2, 3)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60.0\n"
+      "3.71 µs ± 189 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "901 ns ± 35.6 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "#1.正常的談話的聲壓為20000微巴斯卡，請問多少分貝?\n",
-    "#請寫下程式\n",
-    "V1 = 20000\n",
-    "V0 = 20\n",
-    "ans1=20*np.log10(V1/V0)\n",
-    "print(ans1)"
+    "%timeit np.zeros(10000)\n",
+    "%timeit np.empty(10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#np.zero():always 0. ###slower###\n",
+    "#np.empty():Random number closted to 0, depending on memory condition. ###faster###\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. 在不用「整數亂數方法」的限制下，如何將包含小數的轉換整數？請將給定的 a 陣列當中的元素變成去掉小數變成整數"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.25786684 0.8491352  0.09351138]\n",
+      " [0.64495567 0.90985073 0.53148766]]\n",
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "[[0 0 0]\n",
+      " [0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 參考解答\n",
+    "a = np.random.rand(2, 3)\n",
+    "print(a)\n",
+    "print(a // 1)\n",
+    "print(np.floor(a))\n",
+    "print(np.array(a, dtype = 'int32'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. 承上題，怎樣可以限制整數的範圍介於 m - n 之間？請將給定的 a 陣列當中的元素的範圍調整成 m - n 之間。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[29 24 26]\n",
+      " [24 37 31]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = 20\n",
+    "n = 40\n",
+    "c = np.random.randint(m,n,(2,3))\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "作業目標\n",
+    "\n",
+    "在一個陣列中放入多屬性陣列，進一步對陣列做運算\n",
+    "\n",
+    "作業重點\n",
+    "\n",
+    "在建立結構化陣列前需要先設定屬性，在做運算時須注意資料屬性\n",
+    "\n",
+    "題目:\n",
+    "\n",
+    "name_list = ['小明','小華','小菁','小美','小張','John','Mark','Tom']\n",
+    "\n",
+    "sex_list = ['boy','boy','girl','girl','boy','boy','boy','boy']\n",
+    "\n",
+    "weight_list = [67.5,75.3,50.1,45.5,80.8,90.4,78.4,70.7]\n",
+    "\n",
+    "rank_list = [8,1,5,4,7,6,2,3]\n",
+    "\n",
+    "myopia_list = [True,True,False,False,True,True,False,False]\n",
+    "\n",
+    "1. 將上列list依照['name', 'sex', 'weight', 'rank', 'myopia']順序擺入array，並且資料型態順序擺入[Unicode,Unicode,float,int,boolean]\n",
+    "2. 呈上題，將array中體重(weight)數據集取出算出全部平均體重\n",
+    "3. 呈上題，進一步算出男生(sex欄位是boy)平均體重、女生(sex欄位是girl)平均體重"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_list = ['小明','小華','小菁','小美','小張','John','Mark','Tom']\n",
+    "sex_list = ['boy','boy','girl','girl','boy','boy','boy','boy']\n",
+    "weight_list = [67.5,75.3,50.1,45.5,80.8,90.4,78.4,70.7]\n",
+    "rank_list = [8,1,5,4,7,6,2,3]\n",
+    "myopia_list = [True,True,False,False,True,True,False,False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1. 將上列list依照['name', 'sex', 'weight', 'rank', 'myopia']順序擺入array，並且資料型態順序擺入[Unicode,Unicode,float,int,boolean]\n",
+    "dt = np.dtype({'names':('name', 'sex', 'weight', 'rank', 'myopia'), \n",
+    "               'formats':('U10', 'U6', float, int, bool)})\n",
+    "table = np.zeros(8, dtype=dt)\n",
+    "table['name'] = name_list\n",
+    "table['sex'] = sex_list\n",
+    "table['weight'] = weight_list\n",
+    "table['rank'] = rank_list\n",
+    "table['myopia'] = myopia_list\n"
    ]
   },
   {
@@ -176,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "0.09999999999999999"
+       "69.8375"
       ]
      },
      "execution_count": 8,
@@ -185,37 +199,50 @@
     }
    ],
    "source": [
-    "#2.30分貝的聲壓會是50分貝的幾倍?\n",
-    "#公式移項過後可以得到 V1 = ?\n",
-    "#請寫下程式\n",
-    "def V1(GDB):\n",
-    "  return 20*np.power(10,GDB/20)  \n",
-    "V1_GDB30=V1(30)\n",
-    "V1_GDB50=V1(50)\n",
-    "ans2=V1_GDB30/V1_GDB50\n",
-    "print(ans2)"
+    "#2. 呈上題，將array中體重(weight)數據集取出算出全部平均體重\n",
+    "np.mean(table['weight'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1"
+       "77.18333333333332"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#若直接做相除\n",
-    "ans2_2 = 10**(30/20-50/20)\n",
-    "print(ans2_2)"
+    "#3. 呈上題，進一步算出男生(sex欄位是boy)平均體重\n",
+    "np.mean(table['weight'][table['sex'] == 'boy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47.8"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#3. 呈上題，進一步算出女生(sex欄位是girl)平均體重\n",
+    "np.mean(table['weight'][table['sex'] == 'girl'])"
    ]
   }
  ],
