--- a/homework/D20_pandas 效能調校.ipynb
+++ b/homework/D20_pandas 效能調校.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "A:  讀取的資料型態、多使用python內建函數、使用向量化的資料處理\n",
     "    \n",
-    "\n",
+    "講義解答：先檢查有沒有使⽤到⾃訂義的函數，如果有可以查詢pandas中是否有\n",
+    "⽀援相關演算法，如果以上都沒辦法改善，那可以從資料讀取⽅式下⼿，將要\n",
+    "讀取的資料改成pkl檔\n",
     "\n",
     "2.  資料過大時應採取什麼方式讓記憶體占用量下降？\n",
     "\n",
